# LearnMHN

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml  test.yml
demo/: demo.ipynb
doc/: Likelihood.rst  ModelConstruction.rst  PerformanceCriticalCode.rst  RegularizedOptimization.rst  UtilityFunctions.rst  conf.py  index.rst  installation.rst  mhn.original.rst  mhn.rst  mhn.ssr.rst  model.rst  modules.rst  optimizers.rst  requirements.txt  user_guide.rst  utilities.rst
doc/_build/: mhn.original.rst  mhn.rst  mhn.ssr.rst  modules.rst
doc/full_state_space/: Likelihood.rst  ModelConstruction.rst  PerformanceCriticalCode.rst  RegularizedOptimization.rst  UtilityFunctions.rst  fisher.rst  mhn.full_state_space.rst  mhn.original.rst
doc/mcmc/: kernels.rst  mcmc.rst  mhn.mcmc.rst
doc/omega_mhn/: mhn.omega_mhn.rst  with_ssr.rst
doc/original/: Likelihood.rst  ModelConstruction.rst  PerformanceCriticalCode.rst  RegularizedOptimization.rst  UtilityFunctions.rst  mhn.original.rst
doc/ssr/: matrix_exponential.rst  mhn.ssr.rst  regularized_optimization.rst  state_containers.rst  state_space_restriction.rst
doc/training/: likelihood_cmhn.rst  likelihood_omhn.rst  mhn.training.rst  penalties_cmhn.rst  penalties_omhn.rst  (+3 more)
example/: train.py
mhn/: __init__.py  model.py  optimizers.py  utilities.pyx
test/: test_fisher.py  test_full_state_space.py  test_matrix_exponential.py  test_mcmc.py  test_model.py  test_optimizers.py  test_state_space_restriction.py  train.py
(+94 files in other folders)
