[build-system]
requires = ["setuptools>=68.2.0", "wheel",
    "numpy~=1.23.2; python_version < '3.12'",
    "numpy~=1.26.4; python_version >= '3.12'",
    "Cython~=0.29.22",
    "scipy~=1.10.0; python_version < '3.12'",
    "scipy~=1.12.0; python_version >= '3.12'"
]
build-backend = "setuptools.build_meta"